--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
    <p>
    This is a sample web page for CS8
    </p>
+  <p>There is a <a href="sample-table.html">Sample Table</a> that you can look at.</p>
  </body>
 </html>
