--- a/sample-table.html
+++ b/sample-table.html
@@ -2,6 +2,17 @@
 <html>
  <head>
    <title>Sample html table</title>
+  
+  <style>
+   table {
+    border-collapse: collapse;
+   }
+
+   table, th, td {
+    border: 1px solid black;
+   }
+  </style>
+  
  </head>
  <body>
    <h1>A sample HTML table</h1>
